kubernetes/ingress/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: echo
  namespace: kong-learning
  annotations:
    konghq.com/strip-path: "true"

spec:
  ingressClassName: kong

  rules:
    - http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
